--- a/CSC3223/DynamicWeather/DynamicWeather.vcxproj.filters
+++ b/CSC3223/DynamicWeather/DynamicWeather.vcxproj.filters
@@ -13,6 +13,9 @@
     <ClCompile Include="Particle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Snow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -22,6 +25,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Particle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Snow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
